<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#FFFFFF">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bene"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.295"
            app:layout_constraintHorizontal_bias="0.436" android:textSize="30sp" android:textStyle="bold"
            android:id="@+id/textView2"/>
    <TextView
            android:text="@string/picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.505" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/dayonglee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.909" android:textSize="18sp"/>

    <ImageView
            android:src="@drawable/bp_logo"
            android:contentDescription="@string/image_error"
            android:layout_width="50dp"
            android:layout_height="50dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.995"
            android:id="@+id/imageView2"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="44dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/login_button" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/signup"/>
    <TextView
            android:text="@string/signup_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button" android:layout_marginEnd="123dp"
            android:layout_marginRight="123dp" app:layout_constraintEnd_toEndOf="parent"
            android:textIsSelectable="false" android:textStyle="normal|bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>