<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signupActivity" android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false" android:scrollbarStyle="outsideInset"
        android:scrollbarSize="4dp">

    <TextView
            android:text="@string/PW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" tools:ignore="MissingConstraints"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="Enter your ID" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textview4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView
            android:text="Confirm Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/editText7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView
            android:text="ID"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/textview4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" tools:ignore="MissingConstraints"
            android:layout_marginTop="66dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="Enter your Name" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textview" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView
            android:text="Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" tools:ignore="MissingConstraints"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/editText8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/picture"
            android:layout_width="123dp"
            android:layout_height="39dp"
            android:id="@+id/textView4" android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="249dp" android:layout_marginStart="249dp"/>
    <ImageView
            android:src="@drawable/bp_logo"
            android:contentDescription="@string/image_error"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp" app:layout_constraintStart_toEndOf="@+id/textView5"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bene"
            android:textSize="30sp" android:textStyle="bold"
            android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp" app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginLeft="147dp" android:layout_marginStart="147dp"/>
    <TextView
            android:text="E-Mail Adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3"/>
    <Button
            android:text="Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" tools:ignore="MissingConstraints"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="280dp" android:layout_marginStart="280dp"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText7"
            android:hint="Enter your Password" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textview5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText8"
            android:hint="Enter your Password" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textview3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText9"
            android:hint="Enter your E-mail" tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textview2"/>
    <TextView
            android:text="SIGNUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>